--- a/templates/command.twig
+++ b/templates/command.twig
@@ -7,7 +7,7 @@
             <ul>
                 {% for item in data %}
                     <li data-id="{{ loop.index0 }}">
-                        <a href="{{ url(item.url) }}">{{ item.type }}: {{ item.name }}</a>
+                        <a href="{{ item.url }}">{{ item.type }}: {{ item.name }}</a>
                     </li>
                 {% endfor %}
             </ul>
