--- a/templates/command.twig
+++ b/templates/command.twig
@@ -5,16 +5,7 @@
     <div class="amcommand__loader spinner hidden"></div>
     <div class="amcommand__commands">
         {% if data|length %}
-            <ul>
-                {% for command in data %}
-                    <li data-id="{{ loop.index0 }}">
-                        <span class="amcommand__commands--name" data-url="{{ command.url }}"{% if command.call is defined %} data-callback="{{ command.call }}"{% endif %}{% if command.service is defined %} data-callback-service="{{ command.service }}"{% endif %}>{% if command.type|length %}{{ command.type }}: {% endif %}{{ command.name }}</span>
-                        {% if command.info is defined %}
-                            <span class="amcommand__commands--info">{{ command.info }}</span>
-                        {% endif %}
-                    </li>
-                {% endfor %}
-            </ul>
+            {% include 'amcommand/triggerCommand' %}
         {% endif %}
     </div>
 </div>
