--- a/templates/triggerCommand.twig
+++ b/templates/triggerCommand.twig
@@ -1,7 +1,7 @@
 <ul>
     {% for command in data %}
         <li data-id="{{ loop.index0 }}">
-            <span class="amcommand__commands--name" data-url="{{ command.url }}"{% if command.call is defined %} data-callback="{{ command.call }}"{% endif %}{% if command.service is defined %} data-callback-service="{{ command.service }}"{% endif %}>{% if command.type|length %}{{ command.type }}: {% endif %}{{ command.name }}</span>
+            <span class="amcommand__commands--name"{% if command.warn is defined %} data-warn="{{ command.warn }}"{% endif %}{% if command.url is defined %} data-url="{{ command.url }}"{% endif %}{% if command.call is defined %} data-callback="{{ command.call }}"{% endif %}{% if command.service is defined %} data-callback-service="{{ command.service }}"{% endif %}{% if command.data is defined %} data-callback-data="{{ command.data|json_encode }}"{% endif %}>{% if command.type|length %}{{ command.type }}: {% endif %}{{ command.name }}</span>
             {% if command.info is defined %}
                 <span class="amcommand__commands--info">{{ command.info }}</span>
             {% endif %}
