--- a/resources/css/AmCommand.css
+++ b/resources/css/AmCommand.css
@@ -1,19 +1,33 @@
 .amcommand {
     display: none;
     background: #ffffff;
-    border: 2px solid #dadcde;
-    border-radius: 10px;
+    border-radius: 5px;
     margin: 0 auto;
     left: 0;
     right: 0;
     top: 20%;
-    padding: 15px;
     position: fixed;
     width: 400px;
     z-index: 1337;
-    -webkit-box-shadow: 0px 0px 60px 10px rgba(209,210,212,1);
-    -moz-box-shadow: 0px 0px 60px 10px rgba(209,210,212,1);
-    box-shadow: 0px 0px 60px 10px rgba(209,210,212,1);
+    -webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 5px 25px -5px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 5px 25px -5px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 5px 25px -5px rgba(0, 0, 0, 0.25);
+}
+
+.amcommand__tabs {
+    padding: 8px 15px;
+    border-radius: 5px 5px 0 0;
+    color: #29323d;
+    cursor: default;
+    background-image: -webkit-linear-gradient(#f7f7f8, #f4f5f6);
+    background-image: -moz-linear-gradient(#f7f7f8, #f4f5f6);
+    background-image: -ms-linear-gradient(#f7f7f8, #f4f5f6);
+    background-image: -o-linear-gradient(#f7f7f8, #f4f5f6);
+    background-image: linear-gradient(#f7f7f8, #f4f5f6);
+}
+
+.amcommand__container {
+    padding: 15px;
 }
 
 .amcommand__search > input {
@@ -21,14 +35,14 @@
 }
 
 .amcommand__loader {
-    left: 185px;
+    left: 175px;
     position: relative;
     margin-top: 5px;
 }
 
 .amcommand__commands {
     max-height: 400px;
-    margin-top: 10px;
+    margin-top: 15px;
     overflow: auto;
 }
 .amcommand__commands li {
