--- a/templates/command.twig
+++ b/templates/command.twig
@@ -3,7 +3,7 @@
     <div class="amcommand__container">
         <div class="amcommand__search">
             <input class="text" type="text" name="search" value="" autocomplete="off">
-            <input type="button" class="btn submit hidden" value="&rsaquo;">
+            <input type="button" class="btn hidden" value="&rsaquo;">
         </div>
         <div class="amcommand__loader spinner hidden"></div>
         <div class="amcommand__commands">
