--- a/templates/command.twig
+++ b/templates/command.twig
@@ -3,9 +3,8 @@
     <div class="amcommand__container">
         <div class="amcommand__search">
             <input class="text" type="text" name="search" value="" autocomplete="off">
-            <input type="button" class="btn hidden" value="&rsaquo;">
+            <span class="amcommand__loader spinner hidden"></span>
         </div>
-        <div class="amcommand__loader spinner hidden"></div>
         <div class="amcommand__commands">
             <ul></ul>
         </div>
