--- a/templates/settings.twig
+++ b/templates/settings.twig
@@ -1,20 +1,20 @@
 {% import "_includes/forms" as forms %}
 
-<h1>{{ 'Enabled commands'|t }}</h1>
-<p>
-    {{ 'By default, the command palette will only allow users to see and use commands they have permissions for.'|t }}
-    <br>
-    {{ 'E.g.: Users that do not have permission to edit entries within a specific section, that section won’t even show for them.'|t }}
-</p>
-<p>{{ 'You can disable commands you do not wish to use, by unchecking the checkboxes below.'|t }}</p>
-<hr>
-
-{% for commandSetting, command in commands %}
-    {{ forms.lightswitchField({
-        id:           commandSetting,
-        name:         commandSetting,
-        label:        command.name,
-        on:           attribute(settings, commandSetting),
-        instructions: command.info
-    }) }}
-{% endfor %}
+{{ forms.editableTableField({
+    label: 'Enabled Element Types'|t,
+    id: 'elementSearchElementTypes',
+    name: 'elementSearchElementTypes',
+    instructions: 'You are able to enable or disable certain Element Types from the direct element search when the palette is opened.'|t,
+    cols: {
+        elementType: {
+            heading: 'Element Type'|t,
+            type: 'singleline'
+        },
+        enabled: {
+            heading: 'Enable (1) / Disable (0)'|t,
+            type: 'number'
+        },
+    },
+    rows: elementSearchElementTypes,
+    first: true
+}) }}
