--- a/resources/css/AmCommand.css
+++ b/resources/css/AmCommand.css
@@ -14,11 +14,6 @@
     box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.03), 0 5px 25px -5px rgba(0, 0, 0, 0.25);
 }
 
-.amcommand__execute {
-    float: right;
-    margin: 6px 15px 0 0;
-}
-
 .amcommand__tabs {
     padding: 12px 15px 10px;
     border-radius: 5px 5px 0 0;
@@ -34,6 +29,10 @@
 
 .amcommand__container {
     padding: 15px;
+}
+
+.amcommand__search {
+    position: relative;
 }
 
 
@@ -60,8 +59,8 @@
  */
 .amcommand__loader {
     position: absolute;
-    top: 25px;
-    right: 20px;
+    top: 12px;
+    right: 6px;
 }
 
 
