--- a/templates/palette.twig
+++ b/templates/palette.twig
@@ -3,7 +3,7 @@
     <div class="amcommand__container">
         <div class="amcommand__search">
             <input class="text" type="text" name="search" value="" autocomplete="off">
-            <span class="amcommand__loader spinner hidden"></span>
+            <span class="amcommand__loader hidden"></span>
         </div>
         <div class="amcommand__commands">
             <ul></ul>
