--- a/resources/css/Command.css
+++ b/resources/css/Command.css
@@ -42,7 +42,7 @@
     width: 100%;
     border: 0;
     background: rgba(238, 238, 238, 0.72);
-    padding: 8px 30px 10px 10px;
+    padding: 8px 46px 10px 10px;
     border-radius: 0;
     font-size: 28px;
     line-height: 1;
@@ -56,10 +56,45 @@
 /**
  * Loaders
  */
+.amcommand__loader,
+.amcommand__loader:after {
+    border-radius: 50%;
+    width: 22px;
+    height: 22px;
+}
 .amcommand__loader {
     position: absolute;
     top: 12px;
-    right: 6px;
+    right: 10px;
+    border-top: 3px solid rgba(218,90,71, 0.2);
+    border-right: 3px solid rgba(218,90,71, 0.2);
+    border-bottom: 3px solid rgba(218,90,71, 0.2);
+    border-left: 3px solid #da5a47;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation: load8 1.1s infinite linear;
+    animation: load8 1.1s infinite linear;
+}
+@-webkit-keyframes load8 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+@keyframes load8 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
 
 
