--- a/src/templates/palette.twig
+++ b/src/templates/palette.twig
@@ -3,9 +3,8 @@
     <div class="command__container">
         <div class="command__search">
             <input class="text" type="text" name="search" value="" autocomplete="off">
-            <input type="button" class="btn submit hidden" value="&rsaquo;">
+            <span class="command__loader hidden"></span>
         </div>
-        <div class="command__loader spinner hidden"></div>
         <div class="command__commands">
             <ul></ul>
         </div>
